SUBDIRS = lib util doc pic
WINDOWS = $(top_srcdir)/windows/GifWin.cpp \
	  $(top_srcdir)/windows/GifWin.h \
	  $(top_srcdir)/windows/StdAfx.h \
	  $(top_srcdir)/windows/gifshow.cpp \
	  $(top_srcdir)/windows/gifshow.dsp \
	  $(top_srcdir)/windows/gifshow.h \
	  $(top_srcdir)/windows/gifshow.ico \
	  $(top_srcdir)/windows/gifshow.rc \
	  $(top_srcdir)/windows/libungif.dsp

EXTRA_DIST = Makefile.unx \
	     ONEWS \
	     PATENT_PROBLEMS \
	     autogen.sh \
	     giflib.spec \
	     test-unx \
	     giflib.lsm \
	     TODO \
	     BUGS \
	     DEVELOPERS \
	     $(WINDOWS)
#TESTS=test-unx
