#
# Makefile.am for dhcpv6 include subdirectory
# Author: David Cantrell <dcantrell@redhat.com>

noinst_HEADERS = cfg.h common.h dhcp6.h dhcp6r.h hash.h lease.h queue.h \
                 relay6_database.h relay6_parser.h relay6_socket.h \
                 server6_conf.h timer.h

MAINTAINERCLEANFILES = Makefile.in
