# $Id: Makefile.am,v 1.1.1.1 2011/11/03 12:26:52 ken Exp $
#
scriptaculousdir = ${pkgdatadir}/admin-root/lib-js/script.aculo.us
scriptaculous_DATA = builder.js controls.js dragdrop.js effects.js \
                     scriptaculous.js slider.js unittest.js

EXTRA_DIST = builder.js controls.js dragdrop.js effects.js \
             scriptaculous.js slider.js unittest.js

